# dataflow

./: .env  .env.example  .gitignore  Dockerfile  MANIFEST.in  README.md  pip.conf  pyproject.toml  requirements.txt  start.sh
.github/workflows/: main.yml
doc/: dataflow_project_requirements.md
src/dataflow/config/: .env.common  output_config.yaml  settings.py  time_series.csv  time_series.html  time_series.yaml  time_series_config.html  time_series_generator.py  yaml_to_html.py
src/dataflow/config/loaders/: base.py  bbg_spec_loader.py  equity_spec.py  fut_spec.py  fut_spec_loader.py  futopt_spec.py  fwd_spec.py  fx_spec.py  index_spec.py  manager.py  pipelines.py  settings.py  spread_spec.py  time_series.py  time_series_loader.py
src/dataflow/config/specs/: bbg_spec.yaml  equity_spec.yaml  fut_spec.yaml  futopt_spec.yaml  fwd_spec.yaml  fx_spec.yaml  index_spec.yaml  pipelines.yaml  spread_spec.yaml
src/dataflow/extractors/: __init__.py  base.py  extractor_factory.py
src/dataflow/extractors/historical/: base_historical.py  bbg.py  onyx.py
src/dataflow/models/: assets.py
src/dataflow/orm/: base.py  peewee.py  sqlalchemy.py
src/dataflow/outputs/: __init__.py  allocator.py  base.py  router.py
src/dataflow/services/: adhoc.py  historical_service.py  orchestrator.py  realtime_service.py
src/dataflow/symbology/: base.py  bbg_resolver.py  databento.py  databento_resolver.py  onyx.py  onyx_resolver.py
src/dataflow/utils/: bbg.py  common.py  database.py  databento.py  loop_control.py  mkt_db.py  schema_map.py  yaml_to_html.py
(+9 files in other folders)
