[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dataflow"
version = "0.0.0"
description = "A core library for data models"
authors = [
    {name = "cw"},
]
requires-python = ">=3.13"

dependencies = [
    "sqlalchemy>=2.0.0",
    "peewee",
    "peewee_mssql",
    "pydantic>=2.0.0",
    "pydantic-settings",
    "pyyaml",
    "pyodbc",
    "databento",
    "pandas"
]

[project.scripts]
realtime_service = "dataflow.services.realtime_service:clmain"
historical_service = "dataflow.services.historical_service:clmain"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
datacore = ["config/specs/*.yaml"]